--- a/quiz.html
+++ b/quiz.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsive meta tag -->
     <title>AI Quiz</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Linking the CSS file -->
 </head>
+
 <body>
     <h1>AI Quiz</h1>
 
