--- a/quiz.html
+++ b/quiz.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="quiz-container">
-        <h1>AI Quiz</h1>
+        <h1>Big AI Quiz</h1>
         <div id="question-container"></div>
         <button id="next">Next</button>
     </div>
